[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/UiTheme.tres" type="Theme" id=1]
[ext_resource path="res://UserInterface/InGameUi.gd" type="Script" id=2]
[ext_resource path="res://UserInterface/ScreenTitle.tscn" type="PackedScene" id=3]

[node name="InGameUi" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabelCeiling" type="Label" parent="."]
margin_left = 24.0
margin_top = 24.0
margin_right = 64.0
margin_bottom = 48.0
text = "Score: %s"

[node name="ScoreLabelFloor" type="Label" parent="."]
margin_left = 24.0
margin_top = 528.0
margin_right = 109.0
margin_bottom = 552.0
text = "Score: %s"

[node name="PauseMenu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2.33276
margin_top = -1.05261
margin_right = -2.33276
margin_bottom = -1.05261
theme = ExtResource( 1 )
color = Color( 0, 0, 0, 0.235294 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseTitle" parent="PauseMenu" instance=ExtResource( 3 )]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -86.0
margin_top = 100.306
margin_right = 86.0
margin_bottom = 161.306
text = "PAUSE"
align = 1

[node name="Label" type="Label" parent="PauseMenu"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -93.0
margin_top = 177.285
margin_right = 93.0
margin_bottom = 201.285
text = "Press ESC to contunie"
align = 1

[node name="Menu" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -106.5
margin_top = -59.5
margin_right = 106.5
margin_bottom = 59.5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="PauseMenu/Menu"]
margin_right = 213.0
margin_bottom = 57.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="PauseMenu/Menu"]
margin_top = 61.0
margin_right = 213.0
margin_bottom = 119.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PauseMenu/Menu/RetryButton" to="." method="_on_RetryButton_pressed"]
